--- a/templates/register.html
+++ b/templates/register.html
@@ -9,14 +9,13 @@
         <label class="form-label">Usuário</label>
         <input name="nome_usuario" class="form-control" required>
       </div>
-    <div class="mb-3">
-      <label class="form-label fw-medium">Tipo de usuário</label>
-      <select name="tipo_usuario" class="form-select" required>
-        <option value="1">Operador (acesso básico)</option>
-        <option value="2">Administrador (acesso completo)</option>
-      </select>
-    </div>
-    
+      <div class="mb-3">
+        <label class="form-label fw-medium">Tipo de usuário</label>
+        <select name="tipo_usuario" class="form-select" required>
+          <option value="1">Operador (acesso básico)</option>
+          <option value="2">Administrador (acesso completo)</option>
+        </select>
+      </div>
       <div class="mb-3">
         <label class="form-label">Senha</label>
         <input type="password" name="senha" class="form-control" required>
@@ -24,7 +23,7 @@
       <button class="btn btn-success w-100">Cadastrar</button>
     </form>
     <p class="mt-3 small text-muted">
-      Já tem conta? <a href="{{ url_for('login') }}">Faça login</a>
+      Já tem conta? <a href="{{ url_for('auth_bp.login') }}">Faça login</a>
     </p>
   </div>
 </div>
